# HW2

./: pyproject.toml
homework2/: README.md  pyproject.toml  setup.cfg  setup.py
homework2/homework2/: definitions.py
